--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -22,7 +22,7 @@
 
     <div class="form-group mb-0 row my-4">
       <div class="col-12">
-        <button class="btn btn-orange btn-block m-0 w-100" type="submit" (click)="onSetNewPswd()">Continue</button>
+        <button class="btn btn-orange btn-block m-0 w-100" type="submit" [disabled]="!form.valid" (click)="onSetNewPswd()">Continue</button>
       </div>
     </div>
     <div class="text-muted my-3">
