--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -30,7 +30,7 @@
     </div>
     <div class="form-group mb-0 row my-4">
       <div class="col-12">
-        <button class="btn btn-orange btn-block m-0 w-100" type="submit" (click)="onSignIn()">Sign in</button>
+        <button class="btn btn-orange btn-block m-0 w-100" [disabled]="!loginForm.valid" type="submit" (click)="onSignIn()">Sign in</button>
       </div>
     </div>
     <div class="text-muted my-3">
