landing accordion, helpcenter, about us, css issues

--- a/src/app/help-center/help-center.component.html
+++ b/src/app/help-center/help-center.component.html
@@ -1,2 +1,110 @@
 <app-header></app-header>
-<p>help works</p>
+<!-- FAQ Section START -->
+<div class="section-block-grey">
+	<div class="container">
+        <div class="section-heading pb-3">
+			<h4>Help Center</h4>
+		</div>
+		<div class="section-heading">
+			<h4>Step By Step Guide</h4>
+		</div>		
+		<div class="row mt-40">
+			<div class="col-md-12 col-sm-6 col-xs-12">
+				<div class="pr-30-md">
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                          <h2 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                Account Registration
+                            </button>
+                          </h2>
+                          <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <ol class="list-group list-group-numbered bg-transparent border-0">
+                                    <li class="list-group-item bg-transparent border-0"> Go to the Cuttle card website: <a href="">https://cuttlecard.com</a></li>
+                                    <li class="list-group-item bg-transparent border-0"> Click "Register" button at the top-right corner of the homepage</li>
+                                    <li class="list-group-item bg-transparent border-0"> Input your phone number</li>
+                                    <li class="list-group-item bg-transparent border-0"> Acquire the Verification code</li>
+                                    <li class="list-group-item bg-transparent border-0"> Set a unique password for your login</li>
+                                    <li class="list-group-item bg-transparent border-0"> Click "OK" to finish the registration</li>
+                                </ol>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                Card Application
+                            </button>
+                          </h2>
+                          <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <ol class="list-group list-group-numbered bg-transparent border-0">
+                                    <li class="list-group-item bg-transparent border-0"> Go to the Cuttle Login Page</li>
+                                    <li class="list-group-item bg-transparent border-0"> Submit information of your KYC details with a valid ID card/passport/driving license (front and back)</li>
+                                    <li class="list-group-item bg-transparent border-0"> Wait for APPROVED you KYC</li>
+                                    <li class="list-group-item bg-transparent border-0"> The approval process generally takes up to 5 minutes</li>
+                                </ol>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                KYC Verification
+                            </button>
+                          </h2>
+                          <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <ol class="list-group list-group-numbered bg-transparent border-0">
+                                    <li class="list-group-item bg-transparent border-0"> Required Documents for KYC:</li>
+                                    <li class="list-group-item bg-transparent border-0"> Front and back photos of a valid ID card/passport</li>
+                                    <li class="list-group-item bg-transparent border-0"> Information to be provided for KYC:
+                                        <ol class="list-group subpoints bg-transparent border-0">
+                                            <li class="list-group-item bg-transparent border-0">a. Complete register, KYC and activate your Cuttle account and log in</li>
+                                            <li class="list-group-item bg-transparent border-0">b. Click "Collateral Injection" on the page right after login</li>
+                                            <li class="list-group-item bg-transparent border-0">c. Our system will send a message upon successful injection</li>
+                                            <li class="list-group-item bg-transparent border-0">d. The account balance will be automatically update</li>
+                                        </ol>
+                                    </li>
+                                    <li class="list-group-item bg-transparent border-0"> Approval Time:</li>
+                                    <li class="list-group-item bg-transparent border-0"> Generally takes up to 5 munutes.</li>
+                                </ol>
+                            </div>
+                          </div>
+                        </div>
+
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                KYC Verification
+                              </button>
+                            </h2>
+                            <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                              <div class="accordion-body">
+                                <ol class="list-group list-group-numbered bg-transparent border-0">
+                                    <li class="list-group-item bg-transparent border-0"> Required Documents for KYC:</li>
+                                    <li class="list-group-item bg-transparent border-0"> Front and back photos of a valid ID card/passport</li>
+                                    <li class="list-group-item bg-transparent border-0"> Information to be provided for KYC:
+                                        <ol class="list-group subpoints bg-transparent border-0">
+                                            <li class="list-group-item bg-transparent border-0">a. Complete register, KYC and activate your Cuttle account and log in</li>
+                                            <li class="list-group-item bg-transparent border-0">b. Click "Collateral Injection" on the page right after login</li>
+                                            <li class="list-group-item bg-transparent border-0">c. Our system will send a message upon successful injection</li>
+                                            <li class="list-group-item bg-transparent border-0">d. The account balance will be automatically update</li>
+                                        </ol>
+                                    </li>
+                                    <li class="list-group-item bg-transparent border-0"> Approval Time:</li>
+                                    <li class="list-group-item bg-transparent border-0"> Generally takes up to 5 munutes.</li>
+                                </ol>
+                              </div>
+                            </div>
+                          </div>
+                      </div>
+						
+				</div>
+			</div>	
+     
+		</div>
+	</div>
+</div>
+<app-footer></app-footer>
