--- a/src/app/landing/fund-security/fund-security.component.html
+++ b/src/app/landing/fund-security/fund-security.component.html
@@ -8,7 +8,7 @@
 						<h4>Fund Security</h4>
 					</div>
 					<div class="text-content-big mt-4">
-						<p>By choosing PassTo credit card, you will enjoy globally accepted in-store transactions, local and overseas cash withdrawal,</p>
+						<p>By choosing Cuttle Card credit card, you will enjoy globally accepted in-store transactions, local and overseas cash withdrawal</p>
 					</div>
 					<div class="mt-4">
 						<ul class="primary-list">
