--- a/src/app/shared/faq/faq.component.html
+++ b/src/app/shared/faq/faq.component.html
@@ -13,41 +13,60 @@
                         <div class="accordion-item">
                           <h2 class="accordion-header">
                             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                What are some tips when choosing a hosting package?
+                              Why did my transaction fail?
                             </button>
                           </h2>
                           <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non delectus dignissimos debitis laudantium distinctio facilis. Hic beatae maxime iusto necessitatibus, officia minus sint harum architecto soluta. Velit perspiciatis quos magni!</p>
+                              <h5 class="mb-2">Insufficient balance</h5>
+                              <p class="mb-2">Insufficient balance refers to a situation where an account does not have enough available funds to complete a transaction or payment, the transaction will be declined due to insufficient balance.</p>
+                              <p class="mb-3">If a transaction is declined due to insufficient balance, you will need to inject sufficient collaterals to your account to ensure that they have enough balance to complete the transaction.</p>
+                              <h5 class="mb-2">Card Locked</h5>
+                              <ul>
+                                <li class="mb-2"><strong>Locked by Mastercard</strong>: When a suspicious transaction or risk control rule is triggered on a credit card, Mastercard will lock the card to prevent further losses to the user. If your card is locked and you are unable to make a transaction, please contact our customer service representatives for assistance.</li>
+                                <li class="mb-3"><strong>Locked by you</strong>: Users can also lock their credit cards within their credit card account. If you have locked your credit card, please remember to unlock it before making any transaction. If you attempt multiple transactions without unlocking your card, Mastercard may lock your credit card. If you have unlocked your card and still cannot make a transaction, please contact our customer service representatives for assistance.</li>
+                            </ul>
+                            <h5 class="mb-2">Merchant POS system update failure </h5>
+                            <p class="mb-3">Due to the failure to update the list of card issuers in the POS system, several retailers will not accept our credit card for purchases. You must contact them directly to establish alternate payment arrangements.</p>
+                            <h5 class="mb-2">The merchant has a designated credit card for payment</h5>
+                            <p class="mb-3">Certain businesses will only accept credit card payments from specific card issuers. You must contact the merchant's customer care for more information.</p>
                             </div>
                           </div>
                         </div>
                         <div class="accordion-item">
                           <h2 class="accordion-header">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                How do I choose the right server?
+                              After transferring funds, my balance did not increase
                             </button>
                           </h2>
                           <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis commodi excepturi, error ipsum illum officiis temporibus natus, incidunt corporis aliquid cupiditate iure inventore voluptatibus? Natus unde odit mollitia quod id.</p>
+                              <p class="mb-2">If your balance did not increase after transferring funds, it is possible that the transfer is still being processed and confirmed by the system. Please allow some time for the transfer to be completed.</p>
+                              <p class="mb-3">If you have waited for over 10 minutes and your balance still has not increased, there may be an issue with the transfer. Here are some possible reasons:</p>
+                              <ul>
+                                <li class="mb-2">The platform you transferred the assets from has not yet processed the transfer. You can check the status of the transaction on the platform where you transferred the assets from.</li>
+                                <li class="mb-3">There may be an error in the address you used to transfer the assets. Please check the transaction TXID and contact our customer service representatives for assistance.</li>
+                              </ul>
                             </div>
                           </div>
                         </div>
                         <div class="accordion-item">
                           <h2 class="accordion-header">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                What if i need help choosing the right domain?
+                              Refund-related Information
                             </button>
                           </h2>
                           <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quod, nulla amet nostrum magnam exercitationem ut voluptatem quia neque repellat eveniet. Consequuntur tempore possimus sapiente autem delectus esse saepe numquam.</p>
+                             <h5 class="mb-2">Refund Policy</h5>
+                             <p class="mb-3">The annual fees and administrative charges for all credit cards are non-refundable. Customers who wish to request a refund for their purchases must contact the merchant directly and the refund will be returned to the original payment channel. Due to international settlement procedures, the refund process may take 3-7 business days.</p>
+                             <h5 class="mb-2">Why was my payment deducted successfully even though the transaction failed?</h5>
+                             <p class="mb-3">This may happen when there is a communication failure between the third-party payment system and the Mastercard clearing gateway. Although the payment appears to have been deducted, it is only a pre-authorization freeze. The refund process will take 3-7 business days to be returned to the original payment channel. Please be patient during this time.</p>
                             </div>
                           </div>
                         </div>
 
-                        <div class="accordion-item">
+                        <!-- <div class="accordion-item">
                             <h2 class="accordion-header">
                               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                                 How can I Contact your technical team?
@@ -58,9 +77,9 @@
                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quod, nulla amet nostrum magnam exercitationem ut voluptatem quia neque repellat eveniet. Consequuntur tempore possimus sapiente autem delectus esse saepe numquam.</p>
                               </div>
                             </div>
-                          </div>
+                          </div> -->
 
-                          <div class="accordion-item">
+                          <!-- <div class="accordion-item">
                             <h2 class="accordion-header">
                               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                                 Difference between cloud Hosting and shared Hosting?
@@ -71,17 +90,17 @@
                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quod, nulla amet nostrum magnam exercitationem ut voluptatem quia neque repellat eveniet. Consequuntur tempore possimus sapiente autem delectus esse saepe numquam.</p>
                               </div>
                             </div>
-                          </div>
+                          </div> -->
                       </div>
 						
 				</div>
 			</div>	
-      <div class="col-md-12 col-sm-6 col-xs-12">
+      <!-- <div class="col-md-12 col-sm-6 col-xs-12">
         <div class="mt-5 text-center button_resp">
           <a href="#" class="primary-button-light button-msm">Customer Services
           </a>
       </div>
-      </div>
+      </div> -->
 		</div>
 	</div>
 </div>
