--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -93,8 +93,8 @@
                         </ul>
 
                         <div class="d-flex d-none d-lg-block">
-                            <button (click)="redirectTo('/auth/login')" class="btn btn-dark-cuttle" >Login</button>
-                            <button (click)="redirectTo('/auth/register')" class="btn btn-light-cuttle" >Apply Now</button>
+                            <button (click)="redirectTo('/auth/login')" class="btn btn-dark-cuttle btn-sm" >Login</button>
+                            <button (click)="redirectTo('/auth/register')" class="btn btn-light-cuttle btn-sm" >Apply Now</button>
                         </div>
                        </ng-container>
                        <ng-template #dashboard>
