--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -190,7 +190,7 @@
         <carousel [isAnimated]="true" [itemsPerSlide]="itemsPerSlide" [singleSlideOffset]="singleSlideOffset"
             [showIndicators]="false">
             <slide *ngFor="let slide of slides; let index=index">
-                <img [src]="slide.image" alt="image slide" style="display: block; width: 100%;">
+                <img [src]="slide.image" alt="image slide" class="mx-auto img-responsive" style="display: block; width: 100%;">
                 <!-- <div class="carousel-caption">
       <h4>Slide {{index}}</h4>
     </div> -->
