--- a/src/app/shared/faq/faq.component.scss
+++ b/src/app/shared/faq/faq.component.scss
@@ -20,10 +20,12 @@
     background-color: transparent;
     border: none;
   }
+  
 
   .accordion-button {
     background-color: transparent;
     border-bottom: 1px solid #96A1C2;
+    font-size: 16px !important;
   }
 
   .accordion-body {
