--- a/src/app/help-center/help-center.component.html
+++ b/src/app/help-center/help-center.component.html
@@ -21,7 +21,7 @@
                           <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
                                 <ol class="list-group list-group-numbered bg-transparent border-0">
-                                    <li class="list-group-item bg-transparent border-0"> Go to the Cuttle card website: <a href="">https://cuttlecard.com</a></li>
+                                    <li class="list-group-item bg-transparent border-0"> Go to the Cuttle card website: <a (click)="redirectToHome()">https://cuttlecard.com</a></li>
                                     <li class="list-group-item bg-transparent border-0"> Click "Register" button at the top-right corner of the homepage</li>
                                     <li class="list-group-item bg-transparent border-0"> Input your phone number</li>
                                     <li class="list-group-item bg-transparent border-0"> Acquire the Verification code</li>
