--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -95,7 +95,7 @@ footer h3{
     position: absolute;
     right: 0;
     top: 50%;
-    transform:translateY(-40%);
+    transform:translateY(-55%);
     width: 1px;
     height: 40%;
     background-color: #D9DBE1;
@@ -169,6 +169,9 @@ footer h3{
 	font-size: 15px;
     font-family: "Overpass", sans-serif;
 	font-weight: 400;
+}
+.footer-logo img{
+	cursor: pointer;
 }
 
 
