--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -15,8 +15,8 @@
     </div>
     <div class="form-group">
       <label class="col-form-label text-white">Verification Code</label>
-      <input class="form-control" formControlName="smsOtp" type="password" name="login[password]" required="" placeholder="Verification Code">
-      <div class="show-hide"><span class="show"> </span></div>
+      <input class="form-control" formControlName="smsOtp" type="password" name="login[password]" placeholder="Verification Code">
+      <div class="show-hide" [attr.disabled]="!form.value.areaCode || !form.value.phone"><a (click)="onSendOTP()"><span class="show"> </span></a></div>
     </div>
 
 
