--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -28,6 +28,12 @@
     <div class="form-group d-flex justify-content-end">
       <a class="link text-white" (click)="onForgotPassword()">Forgot password?</a>
     </div>
+    <div *ngIf="showOPTVerify" class="form-group row">
+      <div class="col-9">
+        <label class="col-form-label text-white" for="otp">Enter OTP</label>
+        <input class="form-control" [(ngModel)]="smsOtp" [ngModelOptions]="{standalone: true}" type="text" id="otp" placeholder="745741" (keyup)="submitOTP()">
+      </div>
+    </div>
     <div class="form-group mb-0 row my-4">
       <div class="col-12">
         <button class="btn btn-orange btn-block m-0 w-100" [disabled]="!loginForm.valid" type="submit" (click)="onSignIn()">Sign in</button>
