--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -33,7 +33,7 @@
                                         fill="#96A1C2" />
                                 </svg>
                             </span>
-                            (852) 8170 044</a>
+                            {{profileData.phone}}</a>
                     </li>
                 </ul>
             </div>
@@ -136,7 +136,7 @@
                                     data-bs-toggle="dropdown" aria-expanded="false">
                                     <img src="../../../assets/img/user-profile.png" class="rounded-circle w-100"
                                         alt="user profile">
-                                    <span class="ms-2 pt-2">8008585810</span>
+                                    <span class="ms-2 pt-2">{{profileData.phone}}</span>
                                     <span class="dropdown-icon ms-2">
                                         <svg width="26" height="26" viewBox="0 0 26 26" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
