--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header [profileData]="profileData"></app-header>
 <section class="user-dashboard">
     <div class="container">
         <router-outlet></router-outlet>
